--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "neurony/laravel-redirects",
+    "name": "tofandel/laravel-redirects",
+    "version": "4.0.0",
     "description": "Nested URLs redirect logic for Laravel",
     "license": "MIT",
     "keywords": [
@@ -16,6 +17,11 @@
             "name": "Andrei Badea",
             "email": "zbiller@gmail.com",
             "role": "Developer"
+        },
+        {
+            "name": "Adrien Foulon",
+            "email": "adrien.foulon@tukan.hu",
+            "role": "Developer"
         }
     ],
     "require": {
@@ -25,17 +31,17 @@
         "illuminate/database": "^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
-        "phpunit/phpunit": "^9.0.0"
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.5.0"
     },
     "autoload": {
         "psr-4": {
-            "Neurony\\Redirects\\": "src/"
+            "Tofandel\\Redirects\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Neurony\\Redirects\\Tests\\": "tests"
+            "Tofandel\\Redirects\\Tests\\": "tests"
         },
         "classmap": [
             "tests/TestCase.php"
@@ -50,7 +56,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Neurony\\Redirects\\ServiceProvider"
+                "Tofandel\\Redirects\\ServiceProvider"
             ]
         }
     }
