--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/contracts": "^8.0|^9.0|^10.0",
-        "illuminate/support": "^8.0|^9.0|^10.0",
-        "illuminate/database": "^8.0|^9.0|^10.0"
+        "php": "^8.2",
+        "illuminate/contracts": "^10.0",
+        "illuminate/support": "^10.0",
+        "illuminate/database": "^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.5.0"
+        "orchestra/testbench": "^8.5",
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
